<resources>
    <string name="app_name" />
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="cancelar">Cancelar</string>
    <string name="no_tienes_cuenta">No tienes una cuenta?</string>
    <string name="registrate_ahora">Registrate ahora!</string>
    <string name="olvidaste_contrasena">Olvidaste tu contraseña?</string>
    <string name="presiona_aqui">Presiona aquí!</string>
    <string name="texto_largo">Usar tus credenciales de autenticación facilitaran el acceso a nuestras distintas plataformas.</string>
    <string name="texto_largo2">Registrar tus credenciales en esta aplicación, facilitará el acceso a nuestras distintas plataformas.</string>
    <string name="contrasena">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="texto_arriba">Ingresa con tu correo y contraseña para continuar.</string>
    <string name="bienvenido">Bienvenido a Brot\'s</string>
    <string name="llamanos">Llamanos!</string>
    <string name="brot_s">Brot\'s</string>
    <string name="todo">TODO</string>
    <string name="al_momento_de_iniciar_sesio_n_tendras_acceso_a_todas_nuestras_vistas_disponibles">
      Al momento de iniciar sesión tendras accesoa todas las vistas disponibles.</string>
    <string name="no_tienes_cuenta_nregistrate">No tienes cuenta? \nRegistrate</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="confirmar_contraseña">Confirmar Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="ver_terminos">Terminos y Condiciones</string>
    <string name="registro">Registro</string>
    <string name="pesta_a_registro">Pestaña Registro</string>
    <string name="paul_guill_n_jopi_g_center_proyecto_universitario">Paul Guillén | Jopi G Center | Proyecto Farmacia</string>
    <string name="tambi_n_puedes_usar_estas_opciones">También puedes usar estas opciones</string>
    <string name="jopi_g_center">Jopi G Center</string>
    <string name="ingresar">Ingresar</string>
    <string name="bievenido_a_scan_bar_app">Bievenido a Scan Bar App</string>
    <string name="tienes_una_cuenta_inicia_sesion">Tienes una cuenta? Inicia Sesion</string>
    <string name="google">Google</string>
    <string name="Facebook">Facebook</string>
    <string name="celular">Celular</string>
    <string name="twitter">Twitter</string>
    <string name="texto_jopi">Recuerda que al momento de registrarte en nuestra aplicación móvil, tendrás acceso a nuestro contenido web.</string>
    <string name="text_agradecimient">Gracias por llegar hasta aquí, sea bienvenido a nuestra familia, el cual ofrece productos para el cuidado de la salud.</string>
    <string name="regresar">Regresar</string>
    <string name="volverr">Volver</string>
    <string name="atenci_n_lunes_a_s_bado_8_00_am_hasta_10_00pm">Atención : Lunes a Sábado | 8:00 am hasta 10:00pm</string>
    <string name="descubre_tu_plato_perfecto">Descubre tu plato perfecto</string>
    <string name="unet_para_empezar_tu_aventura_culinaria">Uneté para empezar tu aventura culinaria</string>
    <string name="politica_privacidad">Estoy de acuerdo con los términos de servicio y la política de privacidad.</string>
    <string name="suscribete">Suscribete para recibir nuevos platos</string>
    <string name="no_tienes_cuenta_a_n_registrate">No tienes cuenta aún? Registrate</string>
    <string name="recordar_usuario_contrase_a">Recordar Usuario/Contraseña</string>
    <string name="ingresa_con_tu_correo_y_contrase_a">Ingresa con tu correo y contraseña.</string>
    <string name="login">Login</string>
    <string name="completa_estos_datos">Completa estos datos.</string>
    <string name="regresar_al_inicio">Regresar al Inicio</string>

</resources>