<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_mainactivity"
        android:contentDescription="@string/todo" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:background="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="210dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/login_icon_main"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/indigo_daisy"
                        android:text="@string/login"
                        android:textColor="@color/black"
                        android:textSize="55sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/cairo_light"
                        android:padding="15dp"
                        android:text="@string/ingresa_con_tu_correo_y_contrase_a"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/edittext_email"
                        style="@style/EditTextGeneral"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_gray_email"
                        android:fontFamily="@font/cairo_light"
                        android:hint="@string/correo"
                        android:inputType="textEmailAddress"
                        android:padding="15dp"
                        android:textSize="20sp"
                        tools:ignore="Autofill" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginEnd="35dp"
                        android:background="#DFDFDF"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


                    <EditText
                        android:id="@+id/edittext_password"
                        style="@style/EditTextGeneral"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableEnd="@drawable/ic__key"
                        android:hint="@string/contrasena"
                        android:inputType="textPassword"
                        tools:ignore="Autofill" />



                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginEnd="35dp"
                        android:background="#DFDFDF"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                    <CheckBox
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:layout_marginStart="28dp"
                        android:layout_marginEnd="35dp"
                        android:text="@string/recordar_usuario_contrase_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_marginTop="30dp"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:paddingEnd="50dp"
                        android:drawablePadding="15dp"
                        android:paddingStart="50dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_white_person"
                        android:background="@drawable/round_button"
                        android:fontFamily="@font/cairo_light"
                        android:text="Iniciar Sesión"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:layout_margin="40dp"
                        android:fontFamily="@font/cairo_light"
                        android:text="@string/olvidaste_contrasena"
                        android:textColor="@color/green"
                        android:textSize="17sp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:fontFamily="@font/cairo_light"
                            android:textStyle="bold"
                            android:text="@string/no_tienes_cuenta_a_n_registrate"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <ImageView
                            android:onClick="ViewRegister"
                            android:id="@+id/imageview_go_to_register"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/ic_arrow_right" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>