<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_registeractivity"
        tools:ignore="ContentDescription" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <LinearLayout

            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:background="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:indeterminate="true"
                        android:visibility="gone"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/indigo_daisy"
                        android:text="@string/registro"
                        android:textColor="@color/black"
                        android:textSize="55sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/cairo_light"
                        android:padding="15dp"
                        android:text="@string/completa_estos_datos"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/white"
                        android:drawableEnd="@drawable/ic_person_outline"
                        android:fontFamily="@font/cairo_light"
                        android:hint="@string/nombre"
                        android:inputType="textPersonName"
                        android:padding="15dp"
                        android:textSize="20sp"
                        tools:ignore="Autofill" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginEnd="35dp"
                        android:background="#DFDFDF"

                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                    <EditText
                        android:id="@+id/txt_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/white"
                        android:drawableEnd="@drawable/ic_person_outline"
                        android:fontFamily="@font/cairo_light"
                        android:hint="@string/apellido"
                        android:inputType="textPersonName"
                        android:padding="15dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="Autofill" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginEnd="35dp"
                        android:background="#DFDFDF"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


                    <EditText
                        android:id="@+id/txt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/white"
                        android:drawableEnd="@drawable/ic_gray_email"
                        android:fontFamily="@font/cairo_light"
                        android:hint="@string/correo"
                        android:inputType="textEmailAddress"
                        android:padding="15dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="Autofill" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginEnd="35dp"
                        android:background="#DFDFDF"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                    <EditText
                        android:id="@+id/txt_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/white"
                        android:drawableEnd="@drawable/ic_contact_phone"
                        android:fontFamily="@font/cairo_light"
                        android:hint="@string/celular"
                        android:inputType="phone"
                        android:padding="15dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="Autofill" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginEnd="35dp"
                        android:background="#DFDFDF"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


                    <EditText
                        android:id="@+id/txt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/white"
                        android:drawableEnd="@drawable/ic__key"
                        android:fontFamily="@font/cairo_light"
                        android:hint="@string/contrasena"
                        android:inputType="textPassword"
                        android:padding="15dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="Autofill" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginEnd="35dp"
                        android:background="#DFDFDF"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                    <EditText
                        android:id="@+id/txt_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/white"
                        android:drawableEnd="@drawable/ic__key"
                        android:fontFamily="@font/cairo_light"
                        android:hint="@string/confirmar_contraseña"
                        android:inputType="textPassword"
                        android:padding="15dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="Autofill,TextContrastCheck" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginEnd="35dp"
                        android:background="#DFDFDF"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                    <Button
                        android:onClick="btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="35dp"
                        android:background="@drawable/round_button"
                        android:fontFamily="@font/cairo_light"
                        android:text="@string/registrar"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:padding="5dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:onClick="ViewLogin"
                            android:id="@+id/imageview_go_to_login"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/ic_arrow_left"
                            tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/cairo_light"
                            android:text="@string/tienes_una_cuenta_inicia_sesion"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />


                    </LinearLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>